--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -27,6 +27,8 @@
 
 .more-link {
     font-size: .8rem;
+    color: teal;
+    font-weight: initial;
 }
 
 .home-projects-title {
